# iofsd

./: .gitignore  README.md
calc/: Makefile  main.asm  package.config
fuse/: CMakeLists.txt  Makefile  kiofs.1  kiofs.1.txt
fuse/cmake/: FindGLIB.cmake
fuse/src/: main.c
iofs/: CMakeLists.txt  Makefile  iofs.1  iofs.1.scdoc  iofs.1.txt
iofs/cmake/: FindLibticables.cmake  FindLibticalcs.cmake
iofs/src/: fuse.c  main.c  operations.c  operations.h  protocol.c  protocol.h
iofsd/: Makefile  crt0.asm  handlers.asm  main.asm  package.config  protocol.asm
iofsd/src/: handlers.asm  main.asm  protocol.asm  ui.asm
